--- a/GaneEcommerce.Entities/Ganedata.Core.Entities.csproj
+++ b/GaneEcommerce.Entities/Ganedata.Core.Entities.csproj
@@ -61,6 +61,9 @@
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System.Data.DataSetExtensions">
       <Private>True</Private>
     </Reference>
@@ -166,6 +169,7 @@
     <Compile Include="Domain\Auth\AuthUserLoginActivity.cs" />
     <Compile Include="Domain\Auth\AuthUserprofile.cs" />
     <Compile Include="Domain\Auth\Module.cs" />
+    <Compile Include="Domain\Models\OrderSchedule.cs" />
     <Compile Include="Domain\Models\Account.cs" />
     <Compile Include="Domain\Models\AccountAddresses.cs" />
     <Compile Include="Domain\Models\AccountAddressesMapcs.cs" />
@@ -175,6 +179,7 @@
     <Compile Include="Domain\Models\CurrenciesRates.cs" />
     <Compile Include="Domain\Models\Invoice.cs" />
     <Compile Include="Domain\Models\MarketRouteProgress.cs" />
+    <Compile Include="Domain\Models\MerakiScanningApiPayload.cs" />
     <Compile Include="Domain\Models\OrderConsignmentTypes.cs" />
     <Compile Include="Domain\Global\GlobalAccountStatus.cs" />
     <Compile Include="Domain\Models\OrderProcessDetail.cs" />
