--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -60,7 +60,7 @@
     <!--connection strings for Development PC-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC2\MSSQLSERVER01;Initial Catalog=RegalsLiveV1.1923;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />-->
     <!--connection strings for Naveed PC-->
-    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-H9GO0QC\SQLEXPRESS;Initial Catalog=ParklaneLiveV1.1486; Integrated Security=False;User Id=sa;Password=Test@123;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />
+    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-H9GO0QC\SQLEXPRESS;Initial Catalog=BecscoLiveV1.2120; Integrated Security=False;User Id=sa;Password=Test@123;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />
     <!--Start connection string Sami PC-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-01FKHEO;Initial Catalog=GaneIntranet 1.2120; Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30"/>-->
   </connectionStrings>
