--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -110,6 +110,7 @@
     <add key="ApiUrl" value="http://www.apilayer.net/api/live?source=" />
     <add key="ImportCipherLabProductFilePath" value="C:\Users\sami\Desktop\CipherLabProductList.csv" />
     <add key="ImportScanSourceProductFilePath" value="C:\Users\sami\Desktop\ScanSourceProductFile.txt" />
+    <add key="MerakiSecretKey" value="1d9399b50f91cf1672d709744e3d70b93083eb04" />
 
   </appSettings>
   <!--
