--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -31,8 +31,8 @@
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
     </sectionGroup>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <sxClientSettings sxRepositoryLoco="http://141.39.159.17/entity-r/SxServer.svc/ExecuteQueryFake">
     <!-- @sxRepositoryLoco: Location of Entity-R endpoint. -->
@@ -58,9 +58,9 @@
     <!--connection strings for Development Laptop-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-LAP\SQLEXPRESS;Initial Catalog=RegalsLiveV1.1923;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />-->
     <!--connection strings for Development PC-->
-    <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC2\MSSQLSERVER01;Initial Catalog=RegalsLiveV1.1923;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />-->
+    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC2\MSSQLSERVER01;Initial Catalog=RegalsLiveV1.1923;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />
     <!--connection strings for Naveed PC-->
-    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-H9GO0QC\SQLEXPRESS;Initial Catalog=ParklaneLiveV1.1486; Integrated Security=False;User Id=sa;Password=Test@123;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />
+    <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-H9GO0QC\SQLEXPRESS;Initial Catalog=ParklaneLiveV1.1486; Integrated Security=False;User Id=sa;Password=Test@123;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />-->
     <!--Start connection string Sami PC-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-01FKHEO;Initial Catalog=GaneIntranet 1.2120; Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30"/>-->
     <!--Start connection string UMER PC-->
@@ -120,11 +120,11 @@
     <!--This meduim trust level is added here because devexpress reports were not printing and saving properly without specifying that-->
     <trust level="Full" />
     <!--Start session string Development-PC-->
-    <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-PC2\MSSQLSERVER01;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" timeout="240"/>-->
+    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-PC2\MSSQLSERVER01;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" timeout="240"/>
     <!--Start session string Development-Laptop-->
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-LAP\SQLEXPRESS;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" timeout="300" />-->
     <!--Start session string Naveed PC-->
-    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-H9GO0QC\SQLEXPRESS;Integrated Security=false;User Id=sa;Password=Test@123;MultipleActiveResultSets=True;" timeout="300" />
+    <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-H9GO0QC\SQLEXPRESS;Integrated Security=false;User Id=sa;Password=Test@123;MultipleActiveResultSets=True;" timeout="300" />-->
     <!--Start session string Sami PC-->
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-01FKHEO;Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;" timeout="300"/>-->
     <!--Start session string UMER PC-->
@@ -341,10 +341,10 @@
   </devExpress>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-			<dependentAssembly>
-				<assemblyIdentity name="CsvHelper" publicKeyToken="8C4959082BE5C823" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
-			</dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="CsvHelper" publicKeyToken="8C4959082BE5C823" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
+      </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31BF3856AD364E35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
