accountid added invoice profit report,accountid and owner id added in  product sku code and accepted shelf life added in accounts Imported from Changeset 2233

--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -643,6 +643,10 @@
     <Compile Include="Migrations\202002101310559_Meraki-Properties-Added-In-AssetLog.designer.cs">
       <DependentUpon>202002101310559_Meraki-Properties-Added-In-AssetLog.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202002131650240_adding-AcceptedShelfLife-inaccounttable.cs" />
+    <Compile Include="Migrations\202002131650240_adding-AcceptedShelfLife-inaccounttable.designer.cs">
+      <DependentUpon>202002131650240_adding-AcceptedShelfLife-inaccounttable.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -1448,6 +1452,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202002101310559_Meraki-Properties-Added-In-AssetLog.resx">
       <DependentUpon>202002101310559_Meraki-Properties-Added-In-AssetLog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202002131650240_adding-AcceptedShelfLife-inaccounttable.resx">
+      <DependentUpon>202002131650240_adding-AcceptedShelfLife-inaccounttable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
