change the icons into new png icons, align the pages, change text on different pages Imported from Changeset 2236

--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -296,6 +296,8 @@
     <Content Include="Areas\Shop\Content\app\img\left-banner.jpg" />
     <Content Include="Areas\Shop\Content\app\img\left1-273x400.jpg" />
     <Content Include="Areas\Shop\Content\app\img\logo.png" />
+    <Content Include="Areas\Shop\Content\app\img\logo2.png" />
+    <Content Include="Areas\Shop\Content\app\img\logo1.png" />
     <Content Include="Areas\Shop\Content\app\img\newsletter.png" />
     <Content Include="Areas\Shop\Content\app\img\popup.jpg" />
     <Content Include="Areas\Shop\Content\app\img\product.jpg" />
@@ -308,11 +310,10 @@
     <Content Include="Areas\Shop\Content\app\img\product\Canon-EOS-1300D-DSLR-Camera-Body-with-Single-Lens-3.jpg" />
     <Content Include="Areas\Shop\Content\app\img\product\Canon-EOS-1300D-DSLR-Camera-Body-with-Single-Lens-hover.jpg" />
     <Content Include="Areas\Shop\Content\app\img\product\Canon-EOS-1300D-DSLR-Camera-Body-with-Single-Lens.jpg" />
+    <Content Include="Areas\Shop\Content\app\img\product\no_image.gif" />
     <Content Include="Areas\Shop\Content\app\img\product\Microware-CHARGING-DOCK-LED-Light-hover.jpg" />
     <Content Include="Areas\Shop\Content\app\img\product\Microware-CHARGING-DOCK-LED-Light.jpg" />
-    <Content Include="Areas\Shop\Content\app\img\product\no_image.jpg" />
-    <Content Include="Areas\Shop\Content\app\img\product\no_image.png" />
-    <Content Include="Areas\Shop\Content\app\img\product\no_product_image.png" />
+    <Content Include="Areas\Shop\Content\app\img\product\no_image.PNG" />
     <Content Include="Areas\Shop\Content\app\img\slider\1.jpg" />
     <Content Include="Areas\Shop\Content\app\img\slider\2.jpg" />
     <Content Include="Areas\Shop\Content\app\js\app.js" />
@@ -601,6 +602,8 @@
     <Content Include="img\logo\1.png" />
     <Content Include="img\logo\2.png" />
     <Content Include="img\logo\logo.png" />
+    <Content Include="img\logo\logo2.png" />
+    <Content Include="img\logo\logo1.png" />
     <Content Include="img\portfolio\1.jpg" />
     <Content Include="img\portfolio\10-01.jpg" />
     <Content Include="img\portfolio\11-01.jpg" />
@@ -745,6 +748,31 @@
     <Content Include="img\slider\1.jpg" />
     <Content Include="img\slider\2.jpg" />
     <Content Include="img\slider\3.jpg" />
+    <Content Include="img\solutions\Asset_location.png" />
+    <Content Include="img\solutions\Business_intelligence.png" />
+    <Content Include="img\solutions\Communications.png" />
+    <Content Include="img\solutions\Courier_integration.png" />
+    <Content Include="img\solutions\Data_security.png" />
+    <Content Include="img\solutions\Digital_signage.png" />
+    <Content Include="img\solutions\Digital_workspace.png" />
+    <Content Include="img\solutions\Ecommerce.png" />
+    <Content Include="img\solutions\EPoD.png" />
+    <Content Include="img\solutions\Epose_self_service.png" />
+    <Content Include="img\solutions\Fleet_tracking.png" />
+    <Content Include="img\solutions\Human_resources.png" />
+    <Content Include="img\solutions\IT_infrastructure.png" />
+    <Content Include="img\solutions\IT_services.png" />
+    <Content Include="img\solutions\Lose_prevention.png" />
+    <Content Include="img\solutions\Loyalty_systems.png" />
+    <Content Include="img\solutions\Mobile_device_management.png" />
+    <Content Include="img\solutions\Mobile_van_sales.png" />
+    <Content Include="img\solutions\Property_maintenance_software.png" />
+    <Content Include="img\solutions\Retail_solutions.png" />
+    <Content Include="img\solutions\Rfid.png" />
+    <Content Include="img\solutions\Stock_control.png" />
+    <Content Include="img\solutions\Test_procurement.png" />
+    <Content Include="img\solutions\Warehouse_management.png" />
+    <Content Include="img\solutions\Yard_management.png" />
     <Content Include="img\team\01.jpg" />
     <Content Include="img\team\02.jpg" />
     <Content Include="img\team\03.jpg" />
