--- a/WMS/WarehouseZone.csproj
+++ b/WMS/WarehouseZone.csproj
@@ -1890,6 +1890,7 @@
     <Content Include="Views\OrderSchedule\_SchedulerPartial.cshtml" />
     <Content Include="Views\Products\_EditableProductGrid.cshtml" />
     <Content Include="Views\Products\EditProducts.cshtml" />
+    <Content Include="Views\SalesOrders\_AssignPicker.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
