--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -56,11 +56,11 @@
     <!-- connection strings for AZURE -->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=l43zbffach.database.windows.net,1433;Initial Catalog=HiveLiveMaster_v3;Integrated Security=False;User Id=wmsadmin;Password=admin123!;Timeout=0;MultipleActiveResultSets=True" />-->
     <!--connection strings for Development Laptop-->
-    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-LAP\SQLEXPRESS;Initial Catalog=RegalsLiveV1.1923;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />
+    <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-LAP\SQLEXPRESS;Initial Catalog=RegalsLiveV1.1923;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />-->
     <!--connection strings for Development PC-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC2\MSSQLSERVER01;Initial Catalog=RegalsLiveV1.1923;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />-->
     <!--connection strings for Naveed PC-->
-    <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-H9GO0QC\SQLEXPRESS;Initial Catalog=BecscoLiveV1.2120; Integrated Security=False;User Id=sa;Password=Test@123;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />-->
+    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-H9GO0QC\SQLEXPRESS;Initial Catalog=BecscoLiveV1.2120; Integrated Security=False;User Id=sa;Password=Test@123;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />
     <!--Start connection string Sami PC-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-01FKHEO;Initial Catalog=Ganedata Internal; Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30"/>-->
   </connectionStrings>
@@ -120,9 +120,9 @@
     <!--Start session string Development-PC-->
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-PC2\MSSQLSERVER01;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" timeout="240"/>-->
     <!--Start session string Development-Laptop-->
-    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-LAP\SQLEXPRESS;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" timeout="300" />
+    <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-LAP\SQLEXPRESS;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" timeout="300" />-->
     <!--Start session string Naveed PC-->
-    <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-H9GO0QC\SQLEXPRESS;Integrated Security=false;User Id=sa;Password=Test@123;MultipleActiveResultSets=True;" timeout="300" />-->
+    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-H9GO0QC\SQLEXPRESS;Integrated Security=false;User Id=sa;Password=Test@123;MultipleActiveResultSets=True;" timeout="300" />
     <!--Start session string Sami PC-->
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-01FKHEO;Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;" timeout="300"/>-->
 
