--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -18,7 +18,7 @@
     <AssemblyName>WarehouseEcommerce</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
-    <UseIISExpress>true</UseIISExpress>
+    <UseIISExpress>false</UseIISExpress>
     <Use64BitIISExpress />
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
@@ -296,6 +296,7 @@
     <Content Include="Areas\Shop\Content\app\img\left-banner.jpg" />
     <Content Include="Areas\Shop\Content\app\img\left1-273x400.jpg" />
     <Content Include="Areas\Shop\Content\app\img\logo.png" />
+    <Content Include="Areas\Shop\Content\app\img\logo3.png" />
     <Content Include="Areas\Shop\Content\app\img\logo2.png" />
     <Content Include="Areas\Shop\Content\app\img\logo1.png" />
     <Content Include="Areas\Shop\Content\app\img\newsletter.png" />
