Feature  for currency conversion added and few minor changes also made Imported from Changeset 2268

--- a/GaneEcommerce.Services/Ganedata.Core.Services.csproj
+++ b/GaneEcommerce.Services/Ganedata.Core.Services.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Activity\IActivityServices.cs" />
     <Compile Include="Assets\AssetServices.cs" />
     <Compile Include="Assets\IAssetServices.cs" />
+    <Compile Include="Core\Auth\caCurrencyDetail.cs" />
     <Compile Include="Core\Auth\caCurrent.cs" />
     <Compile Include="Core\Auth\caError.cs" />
     <Compile Include="Core\Auth\caSession.cs" />
