Image changes on slider and changes in nav bar Imported from Changeset 2282

--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -18,7 +18,7 @@
     <AssemblyName>WarehouseEcommerce</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
@@ -315,9 +315,9 @@
     <Content Include="Areas\Shop\Content\app\img\product\Microware-CHARGING-DOCK-LED-Light-hover.jpg" />
     <Content Include="Areas\Shop\Content\app\img\product\Microware-CHARGING-DOCK-LED-Light.jpg" />
     <Content Include="Areas\Shop\Content\app\img\product\no_image.PNG" />
-    <Content Include="Areas\Shop\Content\app\img\slider\2.jpg" />
-    <Content Include="Areas\Shop\Content\app\img\slider\3.jpg" />
+    <Content Include="Areas\Shop\Content\app\img\slider\1.png" />
     <Content Include="Areas\Shop\Content\app\img\slider\1.jpg" />
+    <Content Include="Areas\Shop\Content\app\img\slider\4.jpg" />
     <Content Include="Areas\Shop\Content\app\js\app.js" />
     <Content Include="Areas\Shop\Content\bootstrap-theme.css" />
     <Content Include="Areas\Shop\Content\bootstrap-theme.min.css" />
