Minor fixes in both Ecommerce and Warehouse projects Imported from Changeset 2286

--- a/WarehouseEcommerce/Web.config
+++ b/WarehouseEcommerce/Web.config
@@ -14,7 +14,7 @@
     <!--connection strings for Development Laptop-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-LAP\SQLEXPRESS;Initial Catalog=RegalsLiveV1.1923;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True"/>-->
     <!--connection strings for GDSVR2-->
-    <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC2;Initial Catalog=RegalsLiveV1.1923;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />-->
+    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC2\MSSQLSERVER01;Initial Catalog=GaneIntranet;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />
     <!--connection strings for Naveed PC-->
     <!--Start connection string UMER PC-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC4\MSSQLSERVER01;Initial Catalog=Warehouse_db; Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=100" />-->
@@ -30,13 +30,13 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="TenantId" value="1" />
     <add key="ImageFormats" value=".jpeg,.png,.gif,.bmp,.jpg" />
-    <add key="BaseFilePath" value="http://localhost:8006/" />
+    <add key="BaseFilePath" value="http://localhost:8005/" />
     <add key="MiniProfilerEnabled" value="false" />
     <add key="ForceTls12" value="false" />
     <add key="ContactFormEmailAddress" value="umer@ganedata.co.uk" />
     <add key="SmtpClientUserName" value="email@ganedata.co.uk" />
     <add key="SmtpClientPassword" value="G4n3d474Star" />
-    <add key="SiteId" value="1" />
+    <add key="SiteId" value="3" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -48,7 +48,7 @@
   -->
   <system.web>
     <trust level="Full" />
-    <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-PC2;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" timeout="240" />-->
+    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-PC2\MSSQLSERVER01;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" timeout="240" />
     <!--Start session string Development-Laptop-->
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-LAP\SQLEXPRESS;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" timeout="300"/>-->
     <!--End session string Development-Laptop-->
