add data protection page Imported from Changeset 2313

--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -890,6 +890,7 @@
     <Content Include="Views\Home\News.cshtml" />
     <Content Include="uploads\Registration-Certificate.pdf" />
     <Content Include="Views\Home\CourierIntegration.cshtml" />
+    <Content Include="Views\Home\DataProtection.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
